--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -1,5 +1,27 @@
-@use '../base/variables' as v;
+@use 'base/variables' as v;
+@use 'base/mixins' as m;
 
 .header {
-   color: v.$negro;
+   padding: 5rem 0;
+   position: relative;
+
+   &::before {
+      content: '';
+      background-color: v.$negro;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      opacity: .5;
+   }
+
+   .contenido-header {
+      position: relative;
+   }
+}
+
+//header de cada pagina
+.header-inicio {
+   background-image: url(../img/header_inicio.jpg);
 }
