create _barra.scss file in src/scss/header path with some css styles

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -7,11 +7,12 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // colores
-$primario: #e8505b;
-$secundario: #455a64;
+$primario: #5E311E;
+$secundario: #C39C63;
 $negro: #000000;
 $blanco: #ffffff;
 $gris_claro: #eceeef;
+$cafe_claro: #ebe7de;
 
 //unidades
 $separacion: 5rem;
