--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -5,18 +5,22 @@ html {
    box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
    box-sizing: inherit;
 }
 
 body {
    font-family: v.$fuente_principal;
    font-size: 1.6rem;
+   background-color: v.$cafe_claro;
 }
 
 p {
    color: v.$negro;
    font-size: 2rem;
+   line-height: 2;
 }
 
 .contenedor {
@@ -34,18 +38,8 @@ img {
    display: block;
 }
 
-h1, h2, h3 {
-   margin: 0 0 v.$separacion, 0;
-}
-
-h1 {
-   font-size: 4rem;
-}
-
-h2 {
-   font-size: 3.6rem;
-}
-
-h3 {
-   font-size: 3.2rem;
+ul {
+   list-style: none;
+   padding: 0;
+   margin: 0;
 }
