--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,5 +1,7 @@
 // fuentes
-$fuente_principal: "Roboto", sans-serif;
+$fuente_principal: "Raleway", sans-serif;
+$fuente_secundaria: "Roboto", sans-serif;
+$fuente_cursiva: "Bona Nova", serif;
 
 // media queries
 $telefono: 480px;
